# xland_fastwfc

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  cmake_install.cmake  samples.xml  setup.py
cmake_example.egg-info/: SOURCES.txt
fastwfc_resources/: __init__.py
fastwfc_resources/samples/Xland/: data_layer1_backup.xml  data_orig.xml
samples/Xland/: data.xml
src/: color.hpp  main.cpp.bak
src/python/: fastwfc_pybind.cpp
tests/: test_basic.py
